--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -13,7 +13,7 @@
           </div>
       </div>
       <div class="lg:max-w-lg lg:w-full mb-5 md:mb-0 md:w-1/2 w-3/6">
-          <img class="object-cover object-center rounded" alt="hero" src="../../../assets/banner.jpg">
+          <img class="object-cover object-center rounded" alt="hero" src="assets/banner.jpg">
       </div>
   </div>
 </section>
