--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -8,20 +8,20 @@
           </h1>
         
           <div class="flex justify-center">
-            <button type="button" class="focus:outline-none text-white bg-yellow-400 hover:bg-yellow-500 focus:ring-4 focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:focus:ring-yellow-900">Yellow</button>
+            <button type="button" class="focus:outline-none text-white bg-yellow-400 hover:bg-yellow-500 focus:ring-4 focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:focus:ring-yellow-900">CV</button>
           
           </div>
       </div>
-      <div class="lg:max-w-lg lg:w-full mb-5 md:mb-0 md:w-1/2 w-3/6">
-          <img class="object-cover object-center rounded" alt="hero" src="assets/banner.jpg">
-      </div>
+      <div class="lg:max-w-lg lg:w-full mb-5 md:mb-0 md:w-1/2 w-full">
+        <img class="object-cover object-center rounded w-full h-full" alt="hero" src="assets/banner.jpg">
+    </div>
   </div>
 </section>
 
 
 
 <section class="text-gray-600 body-font overflow-hidden">
-  <div class="container px-24 mx-auto">
+  <div class="container sm:px-2 md:px-4 lg:px-24 mx-auto text-justify">
     <section class="text-gray-600 body-font">
       <div class="container px-5 py-16 mx-auto">
         <h1
@@ -104,8 +104,8 @@
 
 
 <section class="text-gray-600 body-font">
-  <div class="container px-24  mx-auto flex flex-wrap">
-    <div class="flex flex-wrap w-full">
+  <div class="container sm:px-3 md:px-4 lg:px-24  mx-auto flex flex-wrap">
+    <div class="container px-5 py-16 mx-auto flex flex-wrap w-full">
       <div class="lg:w-2/5 md:w-1/2 md:pr-10 md:py-6">
         <div class="mb-6">
           <div class="flex flex-col text-center w-full mb-6">
@@ -123,7 +123,7 @@
               <div class="h-full w-1 bg-gray-200 pointer-events-none"></div>
             </div>
             <div
-              class="flex-shrink-0 w-10 h-10 rounded-full bg-indigo-500 inline-flex items-center justify-center text-white relative z-10"
+              class="flex-shrink-0 w-10 h-10 rounded-full bg-yellow-400 inline-flex items-center justify-center text-white relative z-10"
             >
               <svg
                 fill="none"
@@ -154,7 +154,7 @@
               <div class="h-40 w-1 bg-gray-200 pointer-events-none"></div>
             </div>
             <div
-              class="flex-shrink-0 w-10 h-10 rounded-full bg-indigo-500 inline-flex items-center justify-center text-white relative z-10"
+              class="flex-shrink-0 w-10 h-10 rounded-full bg-yellow-400 inline-flex items-center justify-center text-white relative z-10"
             >
               <svg
                 fill="none"
@@ -185,7 +185,7 @@
               <div class="h-full w-1 bg-gray-200 pointer-events-none"></div>
             </div>
             <div
-              class="flex-shrink-0 w-10 h-10 rounded-full bg-indigo-500 inline-flex items-center justify-center text-white relative z-10"
+              class="flex-shrink-0 w-10 h-10 rounded-full bg-yellow-400 inline-flex items-center justify-center text-white relative z-10"
             >
               <svg
                 fill="none"
@@ -215,7 +215,7 @@
               <div class="h-full w-1 bg-gray-200 pointer-events-none"></div>
             </div>
             <div
-              class="flex-shrink-0 w-10 h-10 rounded-full bg-indigo-500 inline-flex items-center justify-center text-white relative z-10"
+              class="flex-shrink-0 w-10 h-10 rounded-full bg-yellow-400 inline-flex items-center justify-center text-white relative z-10"
             >
               <svg
                 fill="none"
@@ -240,7 +240,7 @@
           </div>
           <div class="flex relative">
             <div
-              class="flex-shrink-0 w-10 h-10 rounded-full bg-indigo-500 inline-flex items-center justify-center text-white relative z-10"
+              class="flex-shrink-0 w-10 h-10 rounded-full bg-yellow-400 inline-flex items-center justify-center text-white relative z-10"
             >
               <svg
                 fill="none"
@@ -261,10 +261,7 @@
               >
                 Gestion de repositorios con Git
               </h2>
-              <p class="leading-relaxed">
-                Pitchfork ugh tattooed scenester echo park gastropub whatever
-                cold-pressed retro.
-              </p>
+              
             </div>
           </div>
         </div>
@@ -510,6 +507,10 @@
             </div>
   
             <div class="p-4 sm:w-1/4 w-1/2">
+             <svg class="text-indigo-500 w-14 h-14 mb-3 inline-block" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><title>file_type_sequelize</title><path d="M24.612,10.929V21.016l-8.571,5.071-.077.07v3.77l.077.073,12.071-6.972V8.972L28,8.945l-3.4,1.9.017.082" style="fill:#2f406a"></path><path d="M7.443,21.1l8.6,4.988V30L3.888,23V9l.125-.019,3.393,1.973.037.113V21.1" style="fill:#2379bd"></path><path d="M7.443,11.067,3.888,9,16.014,2l12.1,6.972-3.5,1.957-8.6-4.906L7.443,11.067" style="fill:#03afef"></path><path d="M15.894,19.945l-.093-.1V16.062l.093-.048.023-.093,3.247-1.894.1.022v3.9l-3.369,1.993" style="fill:#2f406a"></path><path d="M12.469,18.073V14.021l.094,0,3.3,1.922.028.076v3.931l-3.425-1.872" style="fill:#2379bd"></path><path d="M15.838,12.027l-3.369,1.993,3.425,1.993,3.369-1.965-3.425-2.021" style="fill:#03afef"></path><path d="M11.7,22.415l-.093-.1V18.533l.093-.048.023-.093L14.971,16.5l.1.022v3.9L11.7,22.415" style="fill:#2f406a"></path><path d="M8.276,20.544V16.491l.094,0,3.3,1.922.028.076v3.931L8.276,20.544" style="fill:#2379bd"></path><path d="M11.645,14.5,8.276,16.491,11.7,18.485,15.07,16.52,11.645,14.5" style="fill:#03afef"></path><path d="M20.386,22.509l-.093-.1V18.626l.093-.048.023-.093,3.247-1.894.1.022v3.9l-3.369,1.993" style="fill:#2f406a"></path><path d="M16.961,20.637V16.585l.094,0,3.3,1.922.028.076v3.931l-3.425-1.872" style="fill:#2379bd"></path><path d="M20.33,14.592l-3.369,1.993,3.425,1.993,3.369-1.965L20.33,14.592" style="fill:#03afef"></path><path d="M16.193,24.98l-.093-.1V21.1l.093-.048.023-.093,3.247-1.894.1.022v3.9L16.193,24.98" style="fill:#2f406a"></path><path d="M12.768,23.108V19.056l.094,0,3.3,1.922.028.076V24.98l-3.425-1.872" style="fill:#2379bd"></path><path d="M16.137,17.062l-3.369,1.993,3.425,1.993,3.369-1.965-3.425-2.022" style="fill:#03afef"></path><path d="M15.894,14.573l-.093-.1V10.69l.093-.048.023-.093,3.247-1.894.1.022v3.9l-3.369,1.993" style="fill:#2f406a"></path><path d="M12.469,12.7V8.649l.094,0,3.3,1.922.028.076v3.931L12.469,12.7" style="fill:#2379bd"></path><path d="M15.838,6.656,12.469,8.649l3.425,1.993,3.369-1.965L15.838,6.656" style="fill:#03afef"></path><path d="M11.7,17.044l-.093-.1V13.161l.093-.048.023-.093,3.247-1.894.1.022v3.9L11.7,17.044" style="fill:#2f406a"></path><path d="M8.276,15.172V11.12l.094,0,3.3,1.922.028.076v3.931L8.276,15.172" style="fill:#2379bd"></path><path d="M11.645,9.126,8.276,11.12,11.7,13.113l3.369-1.965L11.645,9.126" style="fill:#03afef"></path><path d="M20.386,17.137l-.093-.1V13.255l.093-.048.023-.093,3.247-1.894.1.022v3.9l-3.369,1.993" style="fill:#2f406a"></path><path d="M16.961,15.266V11.213l.094,0,3.3,1.922.028.076v3.931l-3.425-1.872" style="fill:#2379bd"></path><path d="M20.33,9.22l-3.369,1.993,3.425,1.993,3.369-1.965L20.33,9.22" style="fill:#03afef"></path><path d="M16.193,19.608l-.093-.1V15.725l.093-.048.023-.093,3.247-1.894.1.022v3.9l-3.369,1.993" style="fill:#2f406a"></path><path d="M12.768,17.736V13.684l.094,0,3.3,1.922.028.076v3.931l-3.425-1.872" style="fill:#2379bd"></path><path d="M16.137,11.691l-3.369,1.993,3.425,1.993,3.369-1.965-3.425-2.022" style="fill:#03afef"></path></g></svg>
+            </div>
+
+            <div class="p-4 sm:w-1/4 w-1/2">
               <svg
                 class="text-indigo-500 w-14 h-14 mb-3 inline-block"
                 viewBox="-16 0 288 288"
@@ -591,6 +592,58 @@
 
      
       </div>
+    </div>
+  </div>
+</section>
+
+<section class="text-gray-600 body-font">
+  <div class="container px-5 pb-24 mx-auto">
+    <div class="flex flex-col text-center w-full mb-20">
+      <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">Proyectos</h1>
+    </div>
+    <div class="flex flex-wrap -m-4">
+      <div class="lg:w-1/3 sm:w-1/2 p-4">
+        <div class="flex relative">
+          <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="assets/inmo.png">
+          <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">
+            <h2 class="tracking-widest text-sm title-font font-medium text-blue-500 mb-1">Proyecto Freelancer / 2024</h2>
+            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Inmobiliaria</h1>
+            <p class="leading-relaxed">Creación de un catalogo de inmuebles, con CRUD para inmuebles y control de usuarios en
+              una pagina web, La maqueta del proyecto fue desarrollada en Figma para la presentacion al
+              cliente. El backend fue desarrollado en node.js y para la base de datos se utilizó PostgreSQL
+              la cual fue mapeada con Sequelize y para el frontend utilicé Angular 17.              
+              </p>
+          </div>
+        </div>
+      </div>
+      <div class="lg:w-1/3 sm:w-1/2 p-4">
+        <div class="flex relative">
+          <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="assets/erp.png">
+          <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">
+            <h2 class="tracking-widest text-sm title-font font-medium text-blue-500 mb-1">Proyecto académico</h2>
+            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">ERP</h1>
+            <p class="leading-relaxed">Trabajo grupal en el cual se desarrolló una pagina web en un contenedor de tomcat, se
+              utilizó como lenguaje de programación Java y para la base de datos PostgreSQL. La pagina
+              web consistía en un control de inventarios, compras y ventas</p>
+          </div>
+        </div>
+      </div>
+      <div class="lg:w-1/3 sm:w-1/2 p-4">
+        <div class="flex relative">
+       
+          <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center " src="assets/super.png">
+          <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">
+            <h2 class="tracking-widest text-sm title-font font-medium text-blue-500 mb-1">Proyecto académico</h2>
+            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">EcoSuper</h1>
+            <p class="leading-relaxed">Realice un sistema para un supermercado utilizando java como lenguaje de programación
+              junto con SQL para almacenar los datos, la arquitectura utilizada en el proyecto fue MVC y
+              iReport como diseñador de informes para generar facturas y reportes de los distintos
+              módulos</p>
+             
+          </div>
+        </div>
+      </div>
+     
     </div>
   </div>
 </section>
