--- a/src/app/components/cv/cv.component.html
+++ b/src/app/components/cv/cv.component.html
@@ -10,7 +10,7 @@
                   <div class="sm:w-1/3 text-center sm:pr-8 sm:py-8">
                     <div class="w-32 h-32 rounded-full inline-flex items-center justify-center bg-gray-200 text-gray-400">
                       
-                    <img class="w-32 h-32 rounded-full shadow-xl dark:shadow-gray-800" src="../../../assets/imagen.png">
+                    <img class="w-32 h-32 rounded-full shadow-xl dark:shadow-gray-800" src="assets/imagen.png">
 
                     </div>
                     <div class="flex flex-col items-center text-center justify-center">
