--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -8,7 +8,7 @@
           </h1>
         
           <div class="flex justify-center">
-            <button type="button" class="focus:outline-none text-white bg-yellow-400 hover:bg-yellow-500 focus:ring-4 focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:focus:ring-yellow-900">CV</button>
+            <button (click)="downloadPDF()" type="button" class="focus:outline-none text-white bg-yellow-400 hover:bg-yellow-500 focus:ring-4 focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:focus:ring-yellow-900">Descargar CV</button>
           
           </div>
       </div>
@@ -62,14 +62,11 @@
             </div>
             <div class="flex-grow pl-6">
               <h2 class="text-gray-900 text-lg title-font font-medium mb-2">
-                Intereses
+                Intereses/Hobbis
               </h2>
-              <div class="leading-relaxed text-base">
-                <ul>
-                  <li> Musica: Me gusta escuchar una gran variedad de generos musicales</li>
-                  <li> Comunidad: Disfruto aprender de otros y compartir mi conocimiento</li>
-                </ul>
-              </div>
+              <p class="leading-relaxed text-base">
+               Escucho una gran variedad de generos musicales, me interesa el canto y el baile, otro de mis hobbis es jugar videojuegos o ver kdramas.
+              </p>
 
             </div>
           </div>
@@ -86,7 +83,7 @@
                 Experiencia
               </h2>
               <p class="leading-relaxed text-base">
-                He desarrollado principalmente en java pero tambien he trabajado en otros proyectos utilizando C++, Angular y Node js.
+                He desarrollado principalmente en java, fue con el lenguaje en el que aprendi a programar pero tambien he trabajado en otros proyectos utilizando C++, Angular y Node js. Actualmente estoy aprendiendo a desarrollar con java pero que tenga comunicacion con un ERP llamado Odoo.
 
               </p>
             </div>
@@ -333,6 +330,10 @@
                     ></path>
                   </g>
                 </svg>
+                <p class="leading-relaxed text-base">
+                  Java
+  
+                </p>
               </div>
             </div>
             <div class="p-4 sm:w-1/4 w-1/2">
@@ -359,6 +360,10 @@
                   ></path>
                 </g>
               </svg>
+              <p class="leading-relaxed text-base">
+                Node js
+
+              </p>
             </div>
             <div class="p-4 sm:w-1/4 w-1/2">
               <svg
@@ -396,6 +401,7 @@
                   ></path>
                 </g>
               </svg>
+             
             </div>
             <div class="p-4 sm:w-1/4 w-1/2">
               <svg
@@ -504,10 +510,16 @@
                   </g>
                 </g>
               </svg>
+              <p class="leading-relaxed text-base">
+                Tailwind CSS
+              </p>
             </div>
   
             <div class="p-4 sm:w-1/4 w-1/2">
              <svg class="text-indigo-500 w-14 h-14 mb-3 inline-block" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><title>file_type_sequelize</title><path d="M24.612,10.929V21.016l-8.571,5.071-.077.07v3.77l.077.073,12.071-6.972V8.972L28,8.945l-3.4,1.9.017.082" style="fill:#2f406a"></path><path d="M7.443,21.1l8.6,4.988V30L3.888,23V9l.125-.019,3.393,1.973.037.113V21.1" style="fill:#2379bd"></path><path d="M7.443,11.067,3.888,9,16.014,2l12.1,6.972-3.5,1.957-8.6-4.906L7.443,11.067" style="fill:#03afef"></path><path d="M15.894,19.945l-.093-.1V16.062l.093-.048.023-.093,3.247-1.894.1.022v3.9l-3.369,1.993" style="fill:#2f406a"></path><path d="M12.469,18.073V14.021l.094,0,3.3,1.922.028.076v3.931l-3.425-1.872" style="fill:#2379bd"></path><path d="M15.838,12.027l-3.369,1.993,3.425,1.993,3.369-1.965-3.425-2.021" style="fill:#03afef"></path><path d="M11.7,22.415l-.093-.1V18.533l.093-.048.023-.093L14.971,16.5l.1.022v3.9L11.7,22.415" style="fill:#2f406a"></path><path d="M8.276,20.544V16.491l.094,0,3.3,1.922.028.076v3.931L8.276,20.544" style="fill:#2379bd"></path><path d="M11.645,14.5,8.276,16.491,11.7,18.485,15.07,16.52,11.645,14.5" style="fill:#03afef"></path><path d="M20.386,22.509l-.093-.1V18.626l.093-.048.023-.093,3.247-1.894.1.022v3.9l-3.369,1.993" style="fill:#2f406a"></path><path d="M16.961,20.637V16.585l.094,0,3.3,1.922.028.076v3.931l-3.425-1.872" style="fill:#2379bd"></path><path d="M20.33,14.592l-3.369,1.993,3.425,1.993,3.369-1.965L20.33,14.592" style="fill:#03afef"></path><path d="M16.193,24.98l-.093-.1V21.1l.093-.048.023-.093,3.247-1.894.1.022v3.9L16.193,24.98" style="fill:#2f406a"></path><path d="M12.768,23.108V19.056l.094,0,3.3,1.922.028.076V24.98l-3.425-1.872" style="fill:#2379bd"></path><path d="M16.137,17.062l-3.369,1.993,3.425,1.993,3.369-1.965-3.425-2.022" style="fill:#03afef"></path><path d="M15.894,14.573l-.093-.1V10.69l.093-.048.023-.093,3.247-1.894.1.022v3.9l-3.369,1.993" style="fill:#2f406a"></path><path d="M12.469,12.7V8.649l.094,0,3.3,1.922.028.076v3.931L12.469,12.7" style="fill:#2379bd"></path><path d="M15.838,6.656,12.469,8.649l3.425,1.993,3.369-1.965L15.838,6.656" style="fill:#03afef"></path><path d="M11.7,17.044l-.093-.1V13.161l.093-.048.023-.093,3.247-1.894.1.022v3.9L11.7,17.044" style="fill:#2f406a"></path><path d="M8.276,15.172V11.12l.094,0,3.3,1.922.028.076v3.931L8.276,15.172" style="fill:#2379bd"></path><path d="M11.645,9.126,8.276,11.12,11.7,13.113l3.369-1.965L11.645,9.126" style="fill:#03afef"></path><path d="M20.386,17.137l-.093-.1V13.255l.093-.048.023-.093,3.247-1.894.1.022v3.9l-3.369,1.993" style="fill:#2f406a"></path><path d="M16.961,15.266V11.213l.094,0,3.3,1.922.028.076v3.931l-3.425-1.872" style="fill:#2379bd"></path><path d="M20.33,9.22l-3.369,1.993,3.425,1.993,3.369-1.965L20.33,9.22" style="fill:#03afef"></path><path d="M16.193,19.608l-.093-.1V15.725l.093-.048.023-.093,3.247-1.894.1.022v3.9l-3.369,1.993" style="fill:#2f406a"></path><path d="M12.768,17.736V13.684l.094,0,3.3,1.922.028.076v3.931l-3.425-1.872" style="fill:#2379bd"></path><path d="M16.137,11.691l-3.369,1.993,3.425,1.993,3.369-1.965-3.425-2.022" style="fill:#03afef"></path></g></svg>
+             <p class="leading-relaxed text-base">
+              Sequelize
+            </p>
             </div>
 
             <div class="p-4 sm:w-1/4 w-1/2">
@@ -583,6 +595,9 @@
                   </g>
                 </g>
               </svg>
+              <p class="leading-relaxed text-base">
+                Spring
+              </p>
             </div>
           </div>
         </div>
@@ -623,7 +638,7 @@
             <h2 class="tracking-widest text-sm title-font font-medium text-blue-500 mb-1">Proyecto académico</h2>
             <h1 class="title-font text-lg font-medium text-gray-900 mb-3">ERP</h1>
             <p class="leading-relaxed">Trabajo grupal en el cual se desarrolló una pagina web en un contenedor de tomcat, se
-              utilizó como lenguaje de programación Java y para la base de datos PostgreSQL. La pagina
+              utilizó como lenguaje de programación Java, para la parte del front usamos primefaces y para la base de datos PostgreSQL. La pagina
               web consistía en un control de inventarios, compras y ventas</p>
           </div>
         </div>
