Changes to be committed: 	modified:   src/app/components/cv/cv.component.html 	modified:   src/app/components/hero/hero.component.ts

--- a/src/app/components/cv/cv.component.html
+++ b/src/app/components/cv/cv.component.html
@@ -181,7 +181,7 @@
                                 Analista de sistemas
                               </p>
                               <p class="text-justify text-sm lg:text-base">
-                                Actualmente trabajo como analista de sistemas en agencias Way.
+                                Desarrollar APIs con java para la comunicacion entre el POS y el ERP de la empresa.
                               </p>
                             </li>
                           </ul>
